k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myproject
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myproject
  template:
    metadata:
      labels:
        app: myproject
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: django-ng
      containers:
        - name: myproject
          image: 205930634535.dkr.ecr.ap-south-1.amazonaws.com/myproject:latest
          ports:
            - containerPort: 80
