k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myproject-service
spec:
  type: LoadBalancer
  selector:
    app: myproject
  ports:
    - port: 80
      targetPort: 8000
